Reduce visibility of JUnit 5 tests and extensions
Tests are not required to be public in JUnit 5. However, since surefire
puts the tests onto the modulepath, we need to open them to the unnamed
module so that JUnit (which is on the classpath) gets access to them.